<resources>
    <string name="app_name">CoffeeOrder</string>
    <string name="jenis_kopi">Jenis Kopi ?</string>
    <string name="kopi">Jenis Kopi</string>
    <string name="jenisk">Jenis Koppi ?</string>
    <string name="kopi_robusta">Kopi Robusta</string>
    <string name="expreso">Expreso</string>
    <string name="kopi_luwak">Kopi Luwak</string>
    <string name="campuran_kopi">Campuran Kopi ?</string>
    <string name="cream">Cream</string>
    <string name="sugar">Sugar</string>
    <string name="menu_tambahan">Menu Tambahan ?</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="mei_goreng">Mei Goreng</string>
    <string name="mei_rebus">Mei Rebus</string>
    <string name="bayar">Bayar</string>
    <string name="jumlah_total_bayar">Jumlah Total Bayar</string>
</resources>