<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/jenisk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rd_robusta"
            android:text="@string/kopi_robusta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rd_ekpreso"
            android:text="@string/expreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rd_luwak"
            android:text="@string/kopi_luwak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <TextView
        android:text="@string/campuran_kopi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/cb_cream"
        android:text="@string/cream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/cb_sugar"
        android:text="@string/sugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/menu_tambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/RadioGroupSatu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_nasiGoreng"
            android:text="@string/nasi_goreng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb_mieGoreng"
            android:text="@string/mei_goreng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb_mieRebus"
            android:text="@string/mei_rebus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Button
        android:onClick="btn_bayar"
        android:id="@+id/btn_bayar"
        android:text="@string/bayar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/jumlah_total_bayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_jumlah"
        android:hint="Rp..."
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>
</LinearLayout>